--- a/CSSAssignment1/css/Index4.css
+++ b/CSSAssignment1/css/Index4.css
@@ -1,7 +1,31 @@
 /*Index 4*/
 
-html, body, main {
-    margin: 0;
-    height: 100%;
-    min-height: 100%;
+a {
+    color: rgb(46, 179, 46);
+}
+
+footer {
+    background-color: rgb(116, 250, 27);
+}
+
+.twilightHeader {
+    text-align: end;
+}
+
+.greenh {
+    color: rgb(46, 179, 46);
+}
+
+.btn-light {
+    color: darkgray;
+}
+
+.btn-light:hover {
+    color:white;
+    background-color: gray;
+}
+
+.btn-light:active {
+    color:white;
+    background-color: gray;
 }
